# HEPMC_Merger

./: .gitignore  CMakeLists.txt  MergeCampaign_1.0.0_1.txt  MergeCampaign_1.0.2.md  README.md  SignalBackgroundMerger.cpp  Signal_Background_Merger_ALWAYS_At_Least_One_Event.py  Test_Back_event.hepmc  Test_DIS_event.hepmc  dummy_background_1.hepmc  signal_background_merger.py  testRemote.py
.github/workflows/: linux-eic-shell.yml
include/HEPMC_Merger/: HEPMC_Source.h  Merger.h  Merger_parser.h
include/deduce_reader_wrapper/: deduce_reader_wrapper.cpp
old/: HEPMC_EVENT_MERGER.ipynb  Test_Back_event.hepmc  requirements.txt
python/: dummy_bg2.hepmc  dummy_signal.hepmc  orig_signal_background_merger.py
src/: HEPMC_Source.cpp  Merger.cpp
